--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Ellaïs Garcia</title>
-        <link rel="stylesheet" href="../style/index.css">
-        <link rel="icon" type="image/x-icon" href="/document/favicon.ico">
+        <link rel="stylesheet" href="style/index.css">
+        <link rel="icon" type="image/x-icon" href="document/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -18,12 +18,12 @@
                 <ul id="header-buttons">
                     <li>
                         <a href="https://www.linkedin.com/in/ella%C3%AFs-garcia-43b602291/" target="_blank" title="Mon LinkedIn">
-                            <img src="../document/linkedin.png" alt="Logo LinkedIn" class="lien-logo">
+                            <img src="document/linkedin.png" alt="Logo LinkedIn" class="lien-logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://gitlab.com/ellais.garcia.bzh" target="_blank" title="Mon LinkedIn">
-                            <img src="../document/gitlab.png" alt="Logo Gitlab" class="lien-logo">
+                            <img src="document/gitlab.png" alt="Logo Gitlab" class="lien-logo">
                         </a>
                     </li>
                     <li><a href="#cv">Mon CV</a></li>
@@ -81,14 +81,14 @@
             <!-- Section pour afficher les détails -->
 
             <div id="event-details-container" class="details">
-                <img src="../document/favicon.png" alt="Image de l'événement">
+                <img src="document/favicon.png" alt="Image de l'événement">
                 <div id="event-details" class="details-text">
                 </div>
             </div>
             
 
             <div id="cv" class="affichage-cv">
-                <embed src="../document/CV_Ellaïs GARCIA.pdf" width="800" height="500" type="application/pdf"/>
+                <embed src="document/CV_Ellaïs GARCIA.pdf" width="800" height="500" type="application/pdf"/>
             </div>
 
             <footer>
@@ -96,19 +96,19 @@
                     <h1 id="contact">Contact</h1>
                     <div class="contact-item">
                         <!-- Icône pour l'email -->
-                        <img src="../document/email.png" alt="Email" class="contact-icon">
+                        <img src="document/email.png" alt="Email" class="contact-icon">
                         <span>ellais.garcia.bzh@gmail.com</span>
                     </div>
                     <div class="contact-item">
                         <!-- Icône pour le téléphone -->
-                        <img src="../document/telephone.png" alt="Téléphone" class="contact-icon">
+                        <img src="document/telephone.png" alt="Téléphone" class="contact-icon">
                         <span>07 67 29 53 81</span>
                     </div>
                 </nav>
             </footer>
             
         </main>
-        <script src="../script/site.js"></script>
+        <script src="script/site.js"></script>
 
     </body>
 </html>
