--- a/index.html
+++ b/index.html
@@ -176,6 +176,13 @@
                             <span>CV</span>
                         </a>
                     </div>
+                    <div class="contact-item">
+                        <!-- Icône pour Code source -->
+                         <a href="https://github.com/EllaisG/EllaisG.github.io" target="_blank" rel="noopener noreferrer">
+                            <img src="document/GitHub.png" alt="Logo GitHub" class="contact-icon">
+                            <span>Code Source Portfolio</span>
+                        </a>
+                    </div>
                 </nav>
             </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
