--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <li><a href="">Accueil</a></li>
                     <li><a href="#projet">Projet</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://github.com/EllaisG/EllaisG.github.io" target="_blank" rel="noopener noreferrer">Code Source</li>
                 </ul>
             </nav>
         </header>
@@ -174,13 +175,6 @@
                         <a href="document/CV_Ellaïs GARCIA.pdf" target="_blank" rel="noopener noreferrer">
                             <img src="document/CV.png" alt="Logo CV" class="contact-icon">
                             <span>CV</span>
-                        </a>
-                    </div>
-                    <div class="contact-item">
-                        <!-- Icône pour Code source -->
-                         <a href="https://github.com/EllaisG/EllaisG.github.io" target="_blank" rel="noopener noreferrer">
-                            <img src="document/GitHub.png" alt="Logo GitHub" class="contact-icon">
-                            <span>Code Source Portfolio</span>
                         </a>
                     </div>
                 </nav>
