--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <meta charset="UTF-8">
         <title>Ellaïs Garcia</title>
         <link rel="stylesheet" href="style/index.css">
+        <link rel="stylesheet" href="style/cat.css">
         <link rel="icon" type="image/x-icon" href="document/favicon.ico">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+        <script src="script/site.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -178,8 +181,7 @@
                     </div>
                 </nav>
             </footer>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-        <script src="script/site.js"></script>
+            
         </main>
     </body>
 </html>
