--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <h1>Bonjour, moi c'est Ellaïs!</h1>
             </div>
 
-            <div class="presentation-wrapper" id="projet">
+            <div class="presentation-wrapper">
                 <div class="presentation">
                     <h1>Présentation</h1>
                     <p>Ma vocation pour le développement est née lors d’un stage de découverte en informatique.
@@ -91,7 +91,7 @@
                 </div>
             </div>
 
-            <div class="projet">
+            <div class="projet" id="projet">
                 <h1>Mes Projets</h1>
                 <div class="projet-container">
                     <div class="mosaic">
@@ -174,7 +174,7 @@
                     </div>
                     <div class="contact-item">
                         <!-- Icône pour l'email -->
-                        <a href="document/CV_Ellaïs GARCIA.pdf" target="_blank" rel="noopener noreferrer">
+                        <a href="document/CV_Ellaïs_GARCIA.pdf" target="_blank" rel="noopener noreferrer">
                             <img src="document/CV.png" alt="Logo CV" class="contact-icon">
                             <span>CV</span>
                         </a>
