affichage resonsive et correctif

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>Ellaïs Garcia</title>
+        <title>Ellaïs Garcia - Portfolio</title>
         <link rel="stylesheet" href="style/index.css">
         <link rel="stylesheet" href="style/cat.css">
         <link rel="icon" type="image/x-icon" href="document/favicon.ico">
@@ -81,7 +81,7 @@
                     <h1>Présentation</h1>
                     <p>Ma vocation pour le développement est née lors d’un stage de découverte en informatique.
                         Depuis, j’ai choisi l’informatique sans hésiter. Après un baccalauréat général, où j'ai commencé à coder en Python, j’ai suivi un BUT Informatique où 
-                        J’ai exploré le développement (Java, Python, web), les bases de données (PostgreSQL, Oracle, MongoDB) et les tests (JUnit, Spring Boot Test).
+                        j’ai exploré le développement (Java, Python, web), les bases de données (PostgreSQL, Oracle, MongoDB) et les tests (JUnit, Spring Boot Test).
                         Cela m'a permis d'être polyvalente sur les différents domaines et de pouvoir mener à bien des projets.
                         À ce jour, je suis désormais étudiante ingénieur en informatique à L'ESIR.
                     </p>
