--- a/index.html
+++ b/index.html
@@ -95,25 +95,25 @@
                 <h1>Mes Projets</h1>
                 <div class="projet-container">
                     <div class="mosaic">
-                        <div class="project-card" data-project="wythoff">
-                            <h3>Jeu de Wythoff</h3>
-                            <span class="date">Nov 2023</span>
+                        <div class="project-card" data-project="portfolio">
+                            <h3>Portfolio</h3>
+                            <span class="date">Jan 2026</span>
                         </div>
-                        <div class="project-card" data-project="sporttrack">
-                            <h3>SportTrack</h3>
-                            <span class="date">Oct 2023-2024</span>
+                        <div class="project-card" data-project="building">
+                            <h3>Building Devis</h3>
+                            <span class="date">Sep 2024-Juin 2025</span>
                         </div>
                         <div class="project-card" data-project="commune">
                             <h3>Commune Bretonne</h3>
                             <span class="date">Jan-Juin 2024</span>
                         </div>
-                        <div class="project-card" data-project="building">
-                            <h3>Building Devis</h3>
-                            <span class="date">Sep 2024-Jan 2025</span>
+                        <div class="project-card" data-project="sporttrack">
+                            <h3>SportTrack</h3>
+                            <span class="date">Oct 2023-2024</span>
                         </div>
-                        <div class="project-card" data-project="portfolio">
-                            <h3>Portfolio</h3>
-                            <span class="date">Nov 2024</span>
+                        <div class="project-card" data-project="wythoff">
+                            <h3>Jeu de Wythoff</h3>
+                            <span class="date">Nov 2023</span>
                         </div>
                     </div>
                 </div>
